Environment somewhat working